<resources>
    <string name="app_name">USTH Weather</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- TODO: Weekday-->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="friday">Friday</string>
    <!-- TODO: Type of weather-->
    <string name="storming">Storming</string>
    <string name='sunny'>Sunny</string>
    <string name="cloudy">Cloudy</string>
    <string name="raining">Raining</string>

    <!-- TODO: Temporary -->
    <string name="temporary">12C</string>
    <string name="hanoi">Hanoi</string>
    <string name="settings" translatable="false">settings</string>
    <string name="refresh" translatable="false">refresh</string>
</resources>